manifest/istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-serve-vs
spec:
  hosts:
    - go-serve-vs
  http:
   - route:
     - destination:
         host: server
         subset: az1
       weight: 90
     - destination:
         host: server
         subset: az2
       weight: 10
